# trill

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  cliff.toml  defs.bzl  package.json
docs/: CLA.md  agents_md.md  authentication.md  config.md  contributing.md  exit-confirmation-prompt-design.md  getting-started.md  install.md  open-source-fund.md  sandbox.md  slash_commands.md  tui-alternate-screen.md  tui-chat-composer.md
sdk/typescript/: README.md  package.json
shell-tool-mcp/: README.md  package.json
shell-tool-mcp/src/: index.ts
trill-cli/: README.md  package.json
trill-cli/scripts/: README.md  install_native_deps.py
trill-rs/: Cargo.toml  README.md  default.nix
trill-rs/ansi-escape/: BUILD.bazel  Cargo.toml
trill-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
trill-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
trill-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
trill-rs/app-server/src/: bespoke_event_handling.rs  config_api.rs  dynamic_tools.rs  filters.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs  trill_message_processor.rs
trill-rs/app-server/tests/common/: BUILD.bazel  Cargo.toml  auth_fixtures.rs  config.rs  lib.rs  mcp_process.rs  models_cache.rs  rollout.rs
trill-rs/app-server/tests/suite/: archive_thread.rs  auth.rs  config.rs  create_thread.rs  fork_thread.rs  fuzzy_file_search.rs  interrupt.rs  list_resume.rs  login.rs  mod.rs  output_schema.rs  send_message.rs  set_default_model.rs  trill_message_processor_flow.rs  user_agent.rs  user_info.rs
trill-rs/app-server/tests/suite/v2/: account.rs  analytics.rs  app_list.rs  collaboration_mode_list.rs  compaction.rs  config_rpc.rs  dynamic_tools.rs  initialize.rs  model_list.rs  output_schema.rs  plan_item.rs  rate_limits.rs  request_user_input.rs  review.rs  thread_archive.rs  thread_fork.rs  thread_list.rs  thread_loaded_list.rs  thread_read.rs  thread_resume.rs  thread_rollback.rs  thread_start.rs  thread_unarchive.rs  turn_interrupt.rs  turn_start.rs
trill-rs/apply-patch/: BUILD.bazel  Cargo.toml
trill-rs/arg0/: BUILD.bazel  Cargo.toml
trill-rs/arg0/src/: lib.rs
trill-rs/async-utils/: BUILD.bazel  Cargo.toml
trill-rs/backend-client/: BUILD.bazel  Cargo.toml
trill-rs/chatgpt/: BUILD.bazel  Cargo.toml  README.md
trill-rs/cli/: BUILD.bazel  Cargo.toml
trill-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  wsl_paths.rs
trill-rs/cli/tests/: execpolicy.rs  features.rs  mcp_add_remove.rs  mcp_list.rs
trill-rs/cloud-requirements/: BUILD.bazel  Cargo.toml
trill-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
trill-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml
trill-rs/common/: BUILD.bazel  Cargo.toml
trill-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json  gpt-5.2-codex_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  models.json  prompt.md  prompt_with_apply_patch_instructions.md
trill-rs/debug-client/: Cargo.toml  README.md
trill-rs/docs/: bazel.md  codex_mcp_interface.md  protocol_v1.md
trill-rs/exec/: BUILD.bazel  Cargo.toml
trill-rs/exec-server/: BUILD.bazel  Cargo.toml  README.md
trill-rs/exec-server/tests/common/: BUILD.bazel  Cargo.toml  lib.rs
trill-rs/execpolicy/: BUILD.bazel  Cargo.toml  README.md
trill-rs/execpolicy-legacy/: BUILD.bazel  Cargo.toml
trill-rs/feedback/: BUILD.bazel  Cargo.toml
trill-rs/file-search/: BUILD.bazel  Cargo.toml  README.md
trill-rs/keyring-store/: BUILD.bazel  Cargo.toml
trill-rs/linux-sandbox/: BUILD.bazel  Cargo.toml  README.md
trill-rs/lmstudio/: BUILD.bazel  Cargo.toml
trill-rs/stdio-to-uds/: BUILD.bazel  Cargo.toml  README.md
trill-rs/stdio-to-uds/src/: main.rs
trill-rs/stdio-to-uds/tests/: stdio_to_uds.rs
trill-rs/tui/: BUILD.bazel  Cargo.toml  styles.md
trill-rs/tui/src/: additional_dirs.rs  app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  cli.rs  clipboard_paste.rs  collab.rs  collaboration_modes.rs  diff_render.rs  exec_command.rs  file_search.rs  get_git_diff.rs  history_cell.rs  lib.rs  main.rs  markdown.rs  model_migration.rs  oss_selection.rs  pager_overlay.rs  resume_picker.rs  session_log.rs  skills_helpers.rs  status_indicator_widget.rs  tooltips.rs  tui.rs  update_action.rs  update_prompt.rs  updates.rs  version.rs
trill-rs/tui/src/bottom_pane/: approval_overlay.rs  bottom_pane_view.rs  chat_composer.rs  chat_composer_history.rs  command_popup.rs  experimental_features_view.rs  feedback_view.rs  file_search_popup.rs  list_selection_view.rs  mod.rs  prompt_args.rs  skill_popup.rs  skills_toggle_view.rs  slash_commands.rs  textarea.rs
trill-rs/tui/src/bottom_pane/request_user_input/: mod.rs
trill-rs/tui/src/chatwidget/: agent.rs  interrupts.rs  skills.rs  tests.rs
trill-rs/tui/src/exec_cell/: model.rs  render.rs
trill-rs/tui/src/notifications/: mod.rs
trill-rs/tui/src/onboarding/: auth.rs  onboarding_screen.rs  trust_directory.rs  welcome.rs
trill-rs/tui/src/onboarding/auth/: headless_chatgpt_login.rs
trill-rs/tui/src/public_widgets/: composer_input.rs
trill-rs/tui/src/status/: card.rs  helpers.rs  rate_limits.rs  tests.rs
trill-rs/tui/src/status/snapshots/: codex_tui__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap  codex_tui__status__tests__status_snapshot_includes_credits_and_limits.snap  codex_tui__status__tests__status_snapshot_includes_forked_from.snap  codex_tui__status__tests__status_snapshot_includes_monthly_limit.snap  codex_tui__status__tests__status_snapshot_includes_reasoning_details.snap  codex_tui__status__tests__status_snapshot_shows_empty_limits_message.snap  codex_tui__status__tests__status_snapshot_shows_stale_limits_message.snap  codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
trill-rs/tui/tests/: all.rs
trill-rs/tui/tests/suite/: no_panic_on_startup.rs  status_indicator.rs  vt100_history.rs  vt100_live_commit.rs
trill-rs/utils/cargo-bin/: BUILD.bazel  Cargo.toml
trill-rs/utils/cargo-bin/src/: lib.rs
(+472 files in other folders)
