[package]
name = "trill-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "trill_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
trill-apply-patch = { workspace = true }
trill-core = { workspace = true }
trill-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
