[package]
name = "trill-stdio-to-uds"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "trill-stdio-to-uds"
path = "src/main.rs"

[lib]
name = "trill_stdio_to_uds"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
uds_windows = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
trill-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
