load("//:defs.bzl", "trill_rust_crate")

trill_rust_crate(
    name = "tui",
    crate_name = "trill_tui",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
    test_data_extra = glob(["src/**/snapshots/**"]),
    integration_compile_data_extra = ["src/test_backend.rs"],
    extra_binaries = [
        "//codex-rs/cli:codex",
    ],
)
